...
                android:text="Filters"
                android:textColor="#000000"
                android:textSize="26sp"
                app:fontFamily="sans-serif-smallcaps" />

            <EditText
                android:id="@+id/nameField2"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clinic Name" />

            <EditText
                android:id="@+id/addressField"
                android:layout_width="274dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />
...
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0." />

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="99dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="#634D72"
                android:text="Search"
                android:textColor="#FFFFFF" />
...
            android:gravity="center_horizontal"
            android:text="Results"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/clinicList"
            android:layout_width="match_parent"
            android:layout_height="257dp">

        </ListView>

        <TextView
...
