...
                android:gravity="center"
                android:text="Welcome ____, you are logged in as patient."></TextView>

        </LinearLayout>

        <Button
            android:id="@+id/bookButton"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#634D72"
            android:text="Book/Check In"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
...
