<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpecificClinic">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/clincText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="CLINIC INFORMATION"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:fontFamily="sans-serif-smallcaps" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="52dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:text=" Name:"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/clinicName"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="xxx"
                android:textColor="#000000"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="94dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text=" Address:"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="166dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:text="xxxx"
                android:textColor="#000000"
                android:textSize="17sp" />

            <Button
                android:id="@+id/locationBtn"
                android:layout_width="11dp"
                android:layout_height="45dp"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:background="@drawable/ic_geolocate_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text=" Clinic Rating:"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_star_big_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="168dp"
                android:layout_height="173dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Sunday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Monday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Tuesday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Wednesday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Thursday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Friday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="Saturday"
                    android:textColor="#000000"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/monHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tuesHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/wedHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/thursHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/friHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/satHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />


            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0." />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/waitTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_vertical"
                android:text="Current Wait Time"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/aptText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="Appointment"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="Service"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/service_spinner"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dateBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#634D72"
                android:text="Choose Date"
                android:textColor="#FFFFFF"></Button>

            <Button
                android:id="@+id/timeBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#634D72"
                android:text="Choose Time"
                android:textColor="#FFFFFF"></Button>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0." />

        <Button
            android:id="@+id/bookBtn"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#634D72"
            android:text=" Book Appointment"

            android:textColor="@color/common_google_signin_btn_text_dark_pressed"></Button>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0." />

        <Button
            android:id="@+id/backButton2"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#9AA4DA"
            android:text="Back"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"></Button>


    </LinearLayout>
    <![CDATA[

    >

]]>
</androidx.constraintlayout.widget.ConstraintLayout>