...
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="354dp"
            android:layout_centerInParent="true" />


        <Space
...
            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0." />

            <Button
                android:id="@+id/saveTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0."
                android:background="#634D72"
                android:text="Save"
...
